<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--CHAMP ADRESSE -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:textColor="@android:color/background_dark"
            android:text="@string/tv_adresse"/>
        <EditText
            android:id="@+id/et_adresse"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:hint="@string/et_adresse"/>
    </LinearLayout>
    <!---->

    <!--CODE POSTAL ET VILLE-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--CHAMP CODE POSTAL -->
        <TextView
            android:id="@+id/tv_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:textColor="@android:color/background_dark"
            android:text="@string/tv_cp"/>
        <EditText
            android:id="@+id/et_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:inputType="number"
            android:hint="@string/et_cp"/>
        <!---->

        <!--CHAMP VILLE -->
        <TextView
            android:id="@+id/tv_ville"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_adresse"
            android:layout_toRightOf="@id/et_cp"
            android:paddingTop="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:textColor="@android:color/background_dark"
            android:text="@string/tv_ville"/>
        <EditText
            android:id="@+id/et_ville"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_ville"
            android:layout_toRightOf="@id/tv_ville"
            android:layout_marginLeft="@dimen/dp_20"
            android:inputType="textCapWords"
            android:hint="@string/et_ville"/>
        <!---->
    </LinearLayout>
    <!---->


</LinearLayout>